--- a/assets/stylesheets/components/_select.scss
+++ b/assets/stylesheets/components/_select.scss
@@ -1,3 +1,7 @@
+@use '../layout/form';
+@use './text-field' as *;
+@use '../abstracts/index' as my;
+
 /* selects
 ---------------------------------------------------------------------------- */
 
@@ -10,6 +14,9 @@ select,
 option {
   width: auto;
   min-width: 1.5em;
+
+  line-height: 1;
+
   cursor: pointer;
 }
 
@@ -18,12 +25,20 @@ option {
  */
 select {
   @extend %text-field-reset;
-  text-indent: 0.01px; // stylelint-disable-next-line property-units
+
+  box-sizing: border-box;
+
+  width: 100%;
+
+  // stylelint-disable-next-line property-units
+  text-indent: 0.01px;
   text-overflow: '';
 
-  box-sizing: content-box;
-
-  appearance: none; // stylelint-disable-next-line no-vendor-prefixes
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -moz-appearance: none;
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: none;
+  appearance: none;
 
   &::-ms-expand {
     display: none;
@@ -32,10 +47,10 @@ select {
 
 select,
 .ie6-9:invalid {
-  padding-right: 1.5em;
-  background-image: url('data:image/png;base64,R0lGODlhDwAUAIABAAAAAP///yH5BAEAAAEALAAAAAAPABQAAAIXjI+py+0Po5wH2HsXzmw//lHiSJZmUAAAOw==');
+  padding-right: my.$gutter;
 
-  background-position: 95% 50%;
+  background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'12\' height=\'6\' viewBox=\'0 0 12 6\'%3E%3Cpolygon fill=\'#a8a8a8\' points=\'0,0 12,0 6,6\'/%3E%3C/svg%3E');
+  background-position: right 6px top 50%;
 }
 
 /**
@@ -45,27 +60,39 @@ select,
 optgroup {
   @extend %os-element-reset;
 
-  font-weight: font-weights('bold');
+  font-weight: my.font-weight('bold');
 }
 
 option {
   padding: 0 0.4em 0 0.1em;
   margin: 0;
+  overflow: hidden;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   &:hover,
   &:focus {
-    color: palette('black');
+    color: my.palette('black');
+  }
+
+  &[disabled] {
+    display: none;
+
+    &[value=''] {
+      display: block;
+    }
   }
 }
 
+// stylelint-disable-next-line no-qualifying-elements
 select[multiple] {
-  // stylelint-disable-next-line no-qualifying-elements
+  resize: vertical;
 }
 
+// stylelint-disable-next-line no-qualifying-elements
 select[multiple] option {
-  // stylelint-disable-next-line no-qualifying-elements
-
   &:checked {
-    font-weight: font-weights('bold');
+    font-weight: my.font-weight('bold');
   }
 }
