--- a/assets/stylesheets/themes/_print.scss
+++ b/assets/stylesheets/themes/_print.scss
@@ -1,49 +1,57 @@
+@use '../abstracts/index' as my;
+
 @media print {
-  /* stylelint-disable disable-block, no-color-literals, declaration-no-important */
+  // stylelint-disable disable-block, no-color-literals, declaration-no-important
 
   /**
-	 * @see http://www.alistapart.com/articles/goingtoprint/
-	 * @see http://www.merttol.com/articles/css/too-light-for-print.html
-	 */
+   * @see http://www.alistapart.com/articles/goingtoprint/
+   * @see http://www.merttol.com/articles/css/too-light-for-print.html
+   */
   * {
+    color: rgb(0, 0, 0) !important; /* Black prints faster: h5bp.com/s */
     text-shadow: none !important;
 
-    color: rgb(0, 0, 0) !important; /* Black prints faster: h5bp.com/s */
     background: transparent !important;
   }
 
+  html,
+  body {
+    display: block;
+
+    height: auto;
+    max-height: none;
+  }
+
+
   body {
     font: 12pt/1.33333 'Palatino Linotype', Palatino, 'Times New Roman', Times, serif;
-
     color: rgb(0, 0, 0);
+
     background: rgb(255, 255, 255) none;
   }
 
   a,
   a:link,
   a:visited {
-    font-weight: font-weights('bold');
-
+    font-weight: my.font-weight('bold');
+    color: rgb(68, 68, 68) !important;
     text-decoration: underline;
 
-    color: rgb(68, 68, 68) !important;
     background: transparent;
   }
 
   a[href]::after {
     font-style: italic;
-
-    word-wrap: break-word;
-
-    white-space: pre-wrap;
     color: rgb(51, 51, 51);
+    word-wrap: break-word;
+    white-space: pre-wrap;
 
     content: ' (' attr(href) ') ';
   }
 
   /**
-	* Don't show links for images, or javascript/internal links
-	*/
+  * Don't show links for images, or javascript/internal links
+  */
 
   a[href^='javascript:'],
   a[href^='#'] {
@@ -54,18 +62,20 @@
 
   abbr[title]::after {
     font-style: italic;
+
     content: ' (' attr(title) ')';
   }
 
   pre,
   blockquote {
     page-break-inside: avoid;
+
     border: 1px solid rgb(153, 153, 153);
   }
 
   /**
-	 * @see css-discuss.incutio.com/wiki/Printing_Tables
-	 */
+   * @see css-discuss.incutio.com/wiki/Printing_Tables
+   */
   thead {
     display: table-header-group;
   }
@@ -82,7 +92,8 @@
   }
 
   @page {
-    margin: 0.5cm; // stylelint-disable-next-line property-units
+    // stylelint-disable-next-line property-units
+    margin: 0.5cm;
   }
 
   p,
@@ -106,11 +117,10 @@
 
   [role='main'] {
     float: none !important;
-
     width: auto;
     padding: 0;
-
     margin: 0 5%;
+
     border: 0;
   }
 
@@ -121,4 +131,4 @@
   }
 }
 
-/* stylelint-enable disable-block, no-color-literals, declaration-no-important */
+// stylelint-enable disable-block, no-color-literals, declaration-no-important
