--- a/assets/stylesheets/components/_card.scss
+++ b/assets/stylesheets/components/_card.scss
@@ -1,7 +1,12 @@
+@use 'sass:map';
+
+@use '../abstracts/index' as my;
+@use 'abstracts/functions' as f;
+
 .card {
   width: 100%;
 
-  border: 1px solid palette('gray', '10%');
+  border: 1px solid my.palette('gray', '10%');
   border-radius: 8px;
 }
 
@@ -25,11 +30,10 @@
 
   grid-template-rows: auto;
 
+  row-gap: f.to-rem(16px);
+
   width: 100%;
-
-  padding: to-rem(16px);
-
-  row-gap: to-rem(16px);
+  padding: f.to-rem(16px);
 }
 
 .card__body--fixed {
@@ -39,22 +43,22 @@
 }
 
 .image-list {
-  & a {
+  a {
     @media (max-width: breakpoint('max-tablet')) {
-      color: palette('orange');
+      color: my.palette('orange');
     }
 
-    @media screen and (min-width: breakpoint('tablet')) {
+    @media screen and (min-width: #{map.get(my.$breakpoints, 'tablet__portrait')}) {
       text-decoration: unset;
     }
   }
 
-  & img {
+  img {
     width: 100%;
   }
 
-  & h2 {
-    margin-bottom: to-rem(8px);
+  h2 {
+    margin-bottom: f.to-rem(8px);
   }
 }
 
@@ -64,7 +68,7 @@
   display: block;
 
   margin: 0;
-  margin-bottom: to-rem(16px);
+  margin-bottom: f.to-rem(16px);
 
   line-height: 0;
 
@@ -82,9 +86,9 @@
     width: 92%;
     height: 90%;
 
-    border: 3px solid palette('white');
-
     content: '';
+
+    border: 3px solid my.palette('white');
 
     transform: translate(-50%, -50%);
   }
