--- a/assets/stylesheets/components/_embed-container.scss
+++ b/assets/stylesheets/components/_embed-container.scss
@@ -1,10 +1,12 @@
+@use 'sass:math';
+
+@use '../abstracts/index' as my;
+
 .embed-container {
   position: relative;
 
   height: 0;
-
-  padding-bottom: (9 / 16 * 100%);
-
+  padding-bottom: (math.div(9, 16) * 100%);
   overflow: hidden;
 }
 
