--- a/assets/stylesheets/components/_figure.scss
+++ b/assets/stylesheets/components/_figure.scss
@@ -1,16 +1,19 @@
+@use '../abstracts/index' as my;
+
 /* figures
 ---------------------------------------------------------------------------- */
 
 /**
  * 1. Address margin not present in IE 8/9 and Safari 5.
- * 2. http://demosthenes.info/blog/662/Design-From-the-Inside-Out-With-CSS-Min-Content
+ * 2. http://thenewcode.com/662/Design-From-the-Inside-Out-With-CSS-Min-Content
  */
 
 figure {
-  margin: 0;
 }
 
 figcaption {
+  width: min-content;
+
   font-size: 83.3333%;
   line-height: inherit;
 }
@@ -18,5 +21,6 @@ figcaption {
 figcaption p,
 figcaption small {
   margin: 0;
+
   font-size: 1em;
 }
