--- a/assets/stylesheets/components/_page-title.scss
+++ b/assets/stylesheets/components/_page-title.scss
@@ -1,3 +1,8 @@
+@use 'sass:map';
+
+@use '../abstracts/index' as my;
+@use 'abstracts/functions' as f;
+
 .page-title {
   position: relative;
 
@@ -5,10 +10,10 @@
 
   align-items: center;
 
-  min-height: to-rem(150px);
+  min-height: f.to-rem(150px);
 
-  @media screen and (min-width: breakpoint('desktop')) {
-    min-height: to-rem(180px);
+  @media screen and (min-width: #{map.get(my.$breakpoints, 'desktop')}) {
+    min-height: f.to-rem(180px);
   }
 
   &::before {
@@ -19,27 +24,30 @@
     display: block;
 
     width: 100%;
+    max-width: my.$max-width;
     height: 100%;
-    max-width: $max-width;
+
     content: '';
 
     transform: translate(-50%, -50%);
 
-    @media screen and (min-width: breakpoint('desktop')) {
-      max-width: $max-width--desktop;
+    @media screen and (min-width: #{map.get(my.$breakpoints, 'desktop')}) {
+      max-width: my.$max-width--desktop;
     }
   }
+
   img {
     width: 100%;
     height: 100%;
   }
+
   .container {
     z-index: 1;
   }
 }
 
 .page-title--dark {
-  color: palette('white');
+  color: my.palette('white');
 }
 
 .page-title--pattern {
