--- a/assets/stylesheets/components/_progress.scss
+++ b/assets/stylesheets/components/_progress.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/index' as my;
+
 @mixin progress-bar-bg {
   &::-webkit-progress-bar {
     @content;
@@ -16,14 +18,13 @@
   }
 
   > div {
-    @include hide-text;
-
-    float: left;
+    @include my.hide-text;
 
     display: block;
-    height: 100%;
 
+    float: left;
     max-width: 100%;
+    height: 100%;
 
     line-height: inherit;
 
@@ -32,37 +33,37 @@
     @content;
 
     &:first-child {
-      border-top-left-radius: $rounded-corner;
-      border-bottom-left-radius: $rounded-corner;
+      border-top-left-radius: my.$rounded-corner;
+      border-bottom-left-radius: my.$rounded-corner;
     }
 
     &:last-child {
-      border-top-right-radius: $rounded-corner;
-      border-bottom-right-radius: $rounded-corner;
+      border-top-right-radius: my.$rounded-corner;
+      border-bottom-right-radius: my.$rounded-corner;
     }
   }
 }
 
 progress,
 [role='progressbar'] {
-  @include progress-bar-fg {
-    background: linear-gradient(90deg, transparent 50%, palette('button', 'dark') 50%) center/50px 50px transparent;
-  }
-  @include progress-bar-bg {
-    background: linear-gradient(90deg, transparent 50%, palette('button', 'base') 50%) center/50px 50px transparent;
-  }
-
   display: block;
 
   width: 100%;
   // Get rid of default border in Firefox.
+  height: my.$leading * 1em;
 
-  height: $leading * 1em;
+  color: my.palette('button', 'submit');
 
-  color: palette('button', 'dark');
-
-  background-color: palette('disabled', 'background');
+  background-color: my.palette('disabled', 'background');
   border: 0;
 
   appearance: none;
+
+  @include progress-bar-fg {
+    background: linear-gradient(90deg, transparent 50%, my.palette('button', 'submit') 50%) center/50px 50px transparent;
+  }
+
+  @include progress-bar-bg {
+    background: linear-gradient(90deg, transparent 50%, my.palette('button', 'base') 50%) center/50px 50px transparent;
+  }
 }
