--- a/assets/stylesheets/components/_slider.scss
+++ b/assets/stylesheets/components/_slider.scss
@@ -1,3 +1,8 @@
+@use 'sass:math';
+@use 'sass:meta';
+
+@use '../abstracts/index' as my;
+
 @mixin range-track($height, $thumb-height, $bg-fallback: null) {
   &::-webkit-slider-runnable-track {
     width: 100%;
@@ -10,25 +15,25 @@
   }
 
   &::-ms-track {
-    @if type-of($height) != 'number' or unitless($height) {
-      @error '`$height` argument is required to be a not unitless number due MS Edge and IE necessary hacks.';
-    }
-
-    @if type-of($thumb-height) != 'number' or unitless($thumb-height) {
-      @error '`$thumb-height` argument is required to be a not unitless number due MS Edge and IE necessary hacks.';
-    }
-
     width: 100%;
+
     color: transparent;
 
     background: transparent;
-
     border-color: transparent;
 
-    @if unit($height) != unit($thumb-height) {
+    @if meta.type-of($height) != 'number' or math.is-unitless($height) {
+      @error '`$height` argument is required to be a not unitless number due MS Edge and IE necessary hacks.';
+    }
+
+    @if meta.type-of($thumb-height) != 'number' or math.is-unitless($thumb-height) {
+      @error '`$thumb-height` argument is required to be a not unitless number due MS Edge and IE necessary hacks.';
+    }
+
+    @if math.unit($height) != math.unit($thumb-height) {
       border-width: calc((#{$thumb-height} - #{$height}) / 2) 0;
     } @else {
-      border-width: (($thumb-height - $height) / 2) 0;
+      border-width: math.div($thumb-height - $height, 2) 0;
     }
   }
 
@@ -50,34 +55,33 @@
 }
 
 @mixin range-thumb($height, $track-height) {
-  @if type-of($height) != 'number' or unitless($height) {
+  @if meta.type-of($height) != 'number' or math.is-unitless($height) {
     @error '`$height` argument is required to be a not unitless number due MS Edge, IE, Blink and Webkit necessary hacks.';
   }
 
-  @if type-of($track-height) != 'number' or unitless($track-height) {
+  @if meta.type-of($track-height) != 'number' or math.is-unitless($track-height) {
     @error '`$track-height` argument is required to be a not unitless number due MS Edge, IE, Blink and Webkit necessary hacks.';
   }
 
   &::-webkit-slider-thumb {
+    appearance: none;
     @content;
 
-    @if unit($height) != unit($track-height) {
+    @if math.unit($height) != math.unit($track-height) {
       margin-top: calc((#{$height} - #{$track-height}) / -2);
     } @else {
-      margin-top: ($height - $track-height) / -2;
+      margin-top: math.div($height - $track-height, -2);
     }
-
-    appearance: none;
   }
 
   &::-moz-range-thumb {
-    @content;
-
     appearance: none;
+    @content;
   }
 
   &::-ms-thumb {
     margin-top: 0; // reset value used for webkit. Weird, right?
+
     appearance: none;
 
     @content;
@@ -86,7 +90,9 @@
 
 @mixin vertical-input-range {
   writing-mode: bt-lr;
-  appearance: slider-vertical; // stylelint-disable-next-line no-vendor-prefixes
+
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: slider-vertical;
 }
 
 /**
@@ -96,7 +102,6 @@
   display: block;
 
   width: 100%; /* 1 */
-
   padding: 0;
 
   vertical-align: middle;
@@ -104,29 +109,28 @@
   cursor: pointer;
 
   background: transparent;
-
   border: 0; /* 1 */
+
   appearance: none;
 
+  // stylelint-disable-next-line mixins-before-declarations
   @include range-track($height: 0.125rem, $thumb-height: 1.5rem, $bg-fallback: null) {
-    // stylelint-disable-next-line mixins-before-declarations
-    background-color: palette('button');
+    background-color: my.palette('button');
 
     &:focus {
       outline: none;
     }
   }
 
+  // stylelint-disable-next-line mixins-before-declarations
   @include range-thumb($height: 1.5rem, $track-height: 0.125rem) {
-    // stylelint-disable-next-line mixins-before-declarations
-    background-color: palette('button');
-
+    background-color: my.palette('button', 'slider');
     border: 0;
   }
 
   /**
-	 * 1. Remove the focus border in Firefox.
-	 */
+   * 1. Remove the focus border in Firefox.
+   */
   &::-moz-focus-outer {
     border: 0; /* 1 */
   }
