--- a/assets/stylesheets/layout/_form.scss
+++ b/assets/stylesheets/layout/_form.scss
@@ -1,174 +1,249 @@
+@use '../abstracts/index' as my;
+@use 'abstracts/functions' as f;
+
 /* FORMS
-  ============================================================================ */
+============================================================================ */
 
 /**
-  * Property compatibility table for form widgets
-  * @see https://developer.mozilla.org/en-US/docs/Property_compatibility_table_for_form_widgets
-*/
+ * Property compatibility table for form widgets
+ * @see https://developer.mozilla.org/en-US/docs/Property_compatibility_table_for_form_widgets
+ */
 
 form {
-  margin: 0;
+  margin: 0 0 my.$gutter 0;
 }
 
+[role='group'],
 fieldset {
-  max-width: none;
-  min-width: 0;
+  display: flex;
 
-  padding: 0;
-  margin: 0;
+  flex-wrap: wrap;
+
+  align-content: flex-start;
+  align-items: stretch;
+
+  min-width: 0;
+  max-width: none;
+  padding: my.$gutter 0;
+  margin-top: 0;
+  margin-right: my.$gutter * -0.5;
+  margin-bottom: 0;
+  margin-left: my.$gutter * -0.5;
 
   border: 0;
+
+  + [role='group'],
+  + fieldset {
+    border-top: my.$stroke solid my.palette('neutral', 'light');
+
+    &:last-child {
+      padding-top: 0;
+
+      border: 0;
+    }
+  }
+
+  > * {
+    margin-right: my.$gutter * 0.5;
+    margin-left: my.$gutter * 0.5;
+  }
+}
+
+fieldset fieldset {
 }
 
 /**
-  * 1. Correct the text wrapping in Edge and IE.
-  * 2. Correct the color inheritance from `fieldset` elements in IE.
-  * 3. Remove the padding so developers are not caught out when they zero out
-  *    `fieldset` elements in all browsers.
-  * 4. to override default firefox style
-  */
-fieldset > legend,
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ * 4. to override default firefox style
+ */
+fieldset > legend, /* 4 */
 legend {
-  display: table;
+  box-sizing: border-box; /* 1 */
+  display: table; /* 1 */
 
-  max-width: 100%;
+  flex-basis: 100%;
 
-  padding: 0;
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  margin-bottom: my.$gutter;
 
-  font-weight: bolder;
-
-  white-space: normal;
-
-  color: inherit;
-
-  box-sizing: border-box;
+  font-weight: my.font-weight('extrabold');
+  color: inherit; /* 2 */
+  white-space: normal; /* 1 */
 }
 
 .label,
 label {
   display: block;
 
-  margin-bottom: to-rem(4px);
+  padding: 0;
+  margin: 0;
+  margin-bottom: f.to-rem(4px);
 
-  font-size: to-em(12px);
-  line-height: to-rem(20px);
+  font-size: f.to-em(12px);
+  line-height: f.to-rem(20px);
+  color: my.palette('text', 'faded');
 
   cursor: pointer;
-
-  color: palette('gray');
 
   .tooltip {
     margin-left: 8px;
   }
+
+  &:focus-within {
+    color: my.palette('text', 'title');
+  }
 }
 
-.validation {
-  margin: 0;
-  margin-top: 8px;
-
-  font-size: to-em(12px);
-  line-height: to-rem(16px);
+// stylelint-disable-next-line selector-no-qualifying-type
+abbr.field__required {
+  color: my.palette('feedback', 'danger');
+  text-decoration: none;
 }
 
-.validation--success > span,
-.validation--success {
-  color: palette('label', 'success');
+
+/* paragraphs inside forms
+---------------------------------------------------------------------------- */
+fieldset,
+form p {
+  position: relative;
+
+  flex-basis: 100%;
+  flex-grow: 1;
+
+  max-width: none;
+  margin-bottom: my.$gutter;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &[data-size] {
+    display: flex;
+
+    flex-wrap: wrap;
+
+    align-content: flex-start;
+
+    min-width: my.$max-width * 0.2; /* 256px */
+  }
+
+  &[data-size='20'] {
+    flex-basis: calc(20% - #{my.$gutter});
+
+    min-width: my.$max-width * 0.125; /* 160px */
+  }
+
+  &[data-size='25'] {
+    flex-basis: calc(25% - #{my.$gutter});
+
+    min-width: my.$max-width * 0.15; /* 192px */
+  }
+
+  &[data-size='33'] {
+    flex-basis: calc(33% - #{my.$gutter});
+
+    min-width: my.$max-width * 0.175; /* 224px */
+  }
+
+  &[data-size='40'] {
+    flex-basis: calc(40% - #{my.$gutter});
+  }
+
+  &[data-size='50'] {
+    flex-basis: calc(50% - #{my.$gutter});
+  }
+
+  &[data-size='60'] {
+    flex-basis: calc(60% - #{my.$gutter});
+  }
+
+  &[data-size='75'] {
+    flex-basis: calc(75% - #{my.$gutter});
+  }
+
+  &[data-size='80'] {
+    flex-basis: calc(80% - #{my.$gutter});
+  }
 }
 
-.validation--warning > span,
-.validation--warning {
-  color: palette('label', 'warning');
-}
-
-.validation--error > span,
-.validation--error {
-  color: palette('label', 'danger');
-}
-
-.required {
-  font-weight: bold;
-
-  color: palette('label', 'danger');
-}
-
-label * {
-  font-size: 1em;
-}
-
-/* pragraphs inside forms
-  ---------------------------------------------------------------------------- */
 form br {
   clear: both;
 }
 
 /* common rules
-  * @see https://github.com/jonathantneal/sanitize.css/issues/115#issue-178563944
-  ---------------------------------------------------------------------------- */
+ * @see https://github.com/jonathantneal/sanitize.css/issues/115#issue-178563944
+---------------------------------------------------------------------------- */
 
 /**
-  * 1. Change the font styles in all browsers (opinionated).
-  * 2. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
-  * 3. Address inconsistent `text-transform` inheritance for `button` and `select`.
-  * 4. Allow setting the same size for all form fields.
-  * 5. Add a focus outline for some fields only (opinionated).
-  * 6. Set the focus outline to be just around the field border.
-  */
+ * 1. Change the font styles in all browsers (opinionated).
+ * 2. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+ * 3. Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * 4. Allow setting the same size for all form fields.
+ */
 %os-element-reset {
+  box-sizing: border-box; /* 4 */
   display: inline-block;
 
-  padding: 1px;
+  // stylelint-disable-next-line property-units
+  padding: 1px; /* 2 */
   margin: 0;
-
   overflow: visible;
 
-  font-size: inherit;
-  line-height: inherit;
-  font-family: inherit;
-  -webkit-font-smoothing: inherit;
-  letter-spacing: inherit;
-
+  font-family: inherit; /* 1 */
+  font-size: inherit; /* 1 */
+  line-height: inherit; /* 1 */
+  color: inherit;
   text-align: inherit;
-  text-transform: inherit;
+  text-transform: inherit; /* 3 */
+  letter-spacing: inherit;
   white-space: normal;
   vertical-align: top;
 
-  color: inherit;
-
-  border-width: $stroke;
+  border-color: my.palette('border');
   border-style: solid;
-  border-color: palette('border');
-  border-radius: $rounded-corner-s;
-
+  border-width: my.$stroke;
+  border-radius: my.$rounded-corner;
   outline: 0;
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-font-smoothing: inherit;
 
-  box-sizing: border-box;
+  &:hover {
+  }
 
   &:focus {
-    outline: 1px dotted palette('black');
-    outline-offset: 0;
+    @include my.focused;
+  }
+
+  &:disabled {
+    color: my.palette('disabled', 'foreground');
+
+    cursor: not-allowed;
+
+    background-color: my.palette('disabled', 'background');
   }
 }
 
-:disabled {
-  cursor: not-allowed;
+:enabled {
+}
 
-  color: palette('disabled', 'foreground');
-
-  background: palette('disabled', 'background');
+:optional {
 }
 
 /**
-  * Correct the text style of placeholders
-  */
-
+ * Correct the text style of placeholders
+ */
 @mixin placeholder {
-  color: palette('placeholder');
+  color: my.palette('placeholder');
 
   opacity: 1;
 }
 
 @mixin placeholder--focus {
-  color: palette('placeholder', 'focus');
+  color: my.palette('placeholder', 'focus');
 }
 
 ::placeholder {
@@ -178,6 +253,9 @@ form br {
 :focus::placeholder {
   @include placeholder--focus;
 }
+
+/* impossible inputs
+============================================================================ */
 
 [type='file'],
 [type='color'],
@@ -192,169 +270,231 @@ form br {
 }
 
 /**
-  * Consistent display mode in Firefox when image field is empty.
-  */
+ * Consistent display mode in Firefox when image field is empty.
+ */
 
 [type='image'] {
   display: inline-block;
 }
 
 /**
-  * Consistent background color on Chrome.
-  */
+ * Consistent background color on Chrome.
+ */
 [type='color'] {
-  background-color: palette('white');
+  background-color: my.palette('white');
 }
 
 /**
-  * Remove the inside button border in Chrome.
-  */
+ * Remove the inside button border in Chrome.
+ */
 ::-webkit-color-swatch {
   border: 0;
 }
 
 /**
-  * Remove the inside button border in Firefox.
-  */
+ * Remove the inside button border in Firefox.
+ */
 ::-moz-color-swatch {
   border: 0;
 }
 
 /**
-  * Remove the inside button padding in Chrome.
-  */
+ * Remove the inside button padding in Chrome.
+ */
 ::-webkit-color-swatch-wrapper {
   padding: 0;
 }
 
 /**
-  * Remove the inside button padding in Firefox.
-  */
+ * Remove the inside button padding in Firefox.
+ */
 ::-moz-color-swatch-wrapper {
   padding: 0;
 }
 
 /**
-  * 1. Consistent background color on Edge and IE.
-  * 2. override Opera margin and padding
-*/
-
+ * 1. Consistent background color on Edge and IE.
+ * 2. override Opera margin and padding
+ */
 [type='file'] {
-  height: 2em;
   min-width: 250px;
-
-  padding: 0;
-  // sass-lint:disable-line no-important
-  margin: 0;
+  height: 2em;
+  // stylelint-disable-next-line declaration-no-important
+  padding: 0 !important; /* 2 */
+  margin: 0; /* 2 */
 
   font-family: inherit;
-
-  text-align: start; // sass-lint:disable-line no-important
+  // stylelint-disable-next-line declaration-no-important
+  text-align: start !important;
   white-space: nowrap;
 
-  cursor: default;
+  background-color: transparent; /* 1 */
+  // stylelint-disable-next-line declaration-no-important
+  border-style: none !important;
 
-  background-color: transparent;
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-box-align: baseline;
 
-  border-style: none; // sass-lint:disable-line no-important
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: none;
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -moz-appearance: none;
+  appearance: normal;
 
-  appearance: normal; //sass-lint:disable-line indentation
-
+  -moz-binding: none;
 }
+
+// [type='file'][multiple] {
+// }
 
 [type='file'] > [type='text'] {
   height: inherit;
 
   font-size: inherit;
+  color: inherit;
   letter-spacing: inherit;
 
-  color: inherit;
-
   background-color: inherit;
-
   border-color: inherit;
 }
 
 [type='file'] > [type='button'] {
-  height: inherit;
+  box-sizing: content-box;
 
+  height: inherit;
   padding: 0;
 
   font-size: inherit;
-
   white-space: normal;
 
-  box-sizing: content-box;
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-box-align: center;
 
   appearance: button;
 }
 
 /**
-  * 1. Correct the inability to style clickable types in iOS and Safari.
-  * 2. Consistent background color for all browsers (same than above).
-  * 3. Consistent style, width and color between all fields (same than above).
-  * 4. Change font properties to `inherit` in Safari.
-  */
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Consistent background color for all browsers (same than above).
+ * 3. Consistent style, width and color between all fields (same than above).
+ * 4. Change font properties to `inherit` in Safari.
+ */
 
 ::-webkit-file-upload-button {
-  font: inherit;
+  font: inherit; /* 4 */
 
   cursor: pointer;
 
-  background-color: palette('button');
+  background-color: my.palette('button'); /* 2 */
+  border-color: my.palette('border'); /* 3 */
+  border-style: solid; /* 3 */
+  border-width: 1px; /* 3 */
 
-  border-width: 1px;
-  border-style: solid;
-  border-color: palette('border');
+  // stylelint-disable-next-line property-no-vendor-prefix
+  -webkit-appearance: button; /* 1 */
 
   &:hover {
-    background-color: palette('button', 'dark');
+    background-color: my.palette('button', 'focus');
   }
 }
 
 /**
-  Add a focus outline for color field (Chrome) and file selector field (Chrome & Safari) (same than above).
-*/
+ * Add a focus outline for color field (Chrome) and file selector field (Chrome & Safari) (same than above).
+ */
 
 :focus::-webkit-color-swatch,
 :focus::-webkit-file-upload-button {
-  outline: 1px dotted palette('black');
+  outline: 1px dotted my.palette('black');
 }
 
 /**
-  Consistent style, width and color between all fields (same than above).
-*/
+ * Consistent style, width and color between all fields (same than above).
+ */
 
 ::-ms-browse {
-  border-width: 1px;
-  border-style: solid;
-  border-color: palette('border');
+  border-color: my.palette('border'); /* 1 */
+  border-style: solid; /* 1 */
+  border-width: 1px; /* 1 */
 
   &:hover {
-    background-color: palette('button', 'dark');
+    background-color: my.palette('button', 'focus');
   }
 }
 
 /**
-  * Add a focus outline for file selector field in Edge and IE (same than above).
-  */
+ * Add a focus outline for file selector field in Edge and IE (same than above).
+ */
 
 :focus::-ms-browse {
-  outline: 1px dotted palette('black');
+  outline: 1px dotted my.palette('black');
 }
 
-/* ALERTS and FORMS */
+// /* ALERTS and FORMS */
+// .success {
+// }
+
+// :valid {
+// }
+
+// :in-range {
+// }
+
+// :required:valid {
+// }
+
+// .warning {
+// }
 
 [required],
 :required {
   box-shadow: none;
 }
 
+// .alert {
+// }
+
+// :out-of-range {
+// }
+
+// [type='submit']:-moz-submit-invalid {
+// }
+
+// x-moz-errormessage {
+// }
+
 /**
-  * Remove the focus outline in Firefox to only keep the original effect.
-  */
+ * Remove the focus outline in Firefox to only keep the original effect.
+ */
 [type='range']:-moz-focusring,
 [type='checkbox']:-moz-focusring,
 [type='radio']:-moz-focusring {
   outline-width: 0;
+}
+
+.validation {
+  margin: 0;
+  margin-top: 8px;
+
+  font-size: f.to-em(12px);
+  line-height: f.to-rem(16px);
+}
+
+.validation--success > span,
+.validation--success {
+  color: palette('feedback', 'success');
+}
+
+.validation--warning > span,
+.validation--warning {
+  color: palette('feedback', 'warning');
+}
+
+.validation--error > span,
+.validation--error {
+  color: palette('feedback', 'danger');
+}
+
+.required {
+  font-weight: bold;
+  color: palette('feedback', 'danger');
 }
