--- a/assets/stylesheets/layout/_table.scss
+++ b/assets/stylesheets/layout/_table.scss
@@ -1,14 +1,9 @@
+@use 'sass:map';
+
+@use '../abstracts/index' as my;
+
 /* TABLES
 ============================================================================ */
-
-.table--wide {
-  width: 100%;
-}
-
-.table--details {
-  // background: palette('gray', '5%');
-}
-
 table,
 thead,
 tbody,
@@ -20,108 +15,80 @@ td {
   height: auto;
 
   font-size: 1em;
-  font-family: $text-font-stack;
-
-  vertical-align: top;
+  vertical-align: inherit;
 
   background-color: transparent;
-
   border: 0;
 
-  @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
+  @media screen and (max-width: #{map.get(my.$breakpoints, 'toggle-table-layout') - 0.01}) {
     display: block;
   }
 }
 
 table {
-  font-size: 100%;
-  font-family: inherit;
-  font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1, 'pnum' 0, 'tnum' 1, 'onum' 0, 'lnum' 1, 'dlig' 0;
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: #{my.$leading * 1em};
+  margin-left: 0;
 
-  border-collapse: separate;
-  border-spacing: 0;
+  font-family: inherit;
+  font-size: 100%;
+  font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1, 'pnum' 0, 'tnum' 1, 'onum' 0, 'lnum' 1, 'dlig' 0;
+  vertical-align: top;
+
   empty-cells: show;
+  border-spacing: 0;
+  border-collapse: separate;
+
+  border-radius: my.$rounded-corner;
 }
 
 thead,
 tfoot {
-  font-family: $title-font-stack;
-
-  text-transform: uppercase;
+  @media screen and (max-width: #{map.get(my.$breakpoints, 'toggle-table-layout') - 0.01}) {
+    display: none;
+  }
 }
 
-.table--details thead th {
-  text-align: center;
-  background: palette('orange', 'base');
-  padding: 1rem;
+thead {
+  vertical-align: bottom;
+}
+
+tfoot {
+  vertical-align: top;
 }
 
 table p,
 table li {
   font-size: 1em;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
-// caption {
-// }
+caption {
+}
 
 tr {
-  @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
+  @media screen and (max-width: #{map.get(my.$breakpoints, 'toggle-table-layout') - 0.01}) {
     &:last-child {
       margin-bottom: 0;
     }
   }
 }
 
-tbody {
-  & th,
-  & td {
-    padding: to-rem(8px) to-rem(4px);
-
-    @media screen and (min-width: breakpoint('tablet')) {
-      border-bottom: 1px solid palette('gray', '10%');
-      padding: to-rem(20px) to-rem(8px);
-    }
-  }
-  & td {
-    text-align: right;
-
-    font-variant-numeric: lining-nums oldstyle-nums;
-
-    @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
-      text-align: left;
-
-      &[aria-label] {
-        text-align: right;
-
-        &::before {
-          float: left;
-
-          font-style: italic;
-
-          content: attr(aria-label) ': ';
-        }
-      }
-    }
-    @media screen and (min-width: breakpoint('desktop')) {
-      border-right: 1px solid palette('gray', '10%');
-    }
-  }
-  & th {
-    text-align: left;
-    @media screen and (min-width: breakpoint('desktop')) {
-      border-left: 1px solid palette('gray', '10%');
-    }
-  }
-}
+th,
+td {}
 
 th {
-  font-weight: bold;
+  font-weight: my.font-weight('bold');
 }
 
 td {
   font-family: inherit;
 
-  @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
+  @media screen and (max-width: #{map.get(my.$breakpoints, 'toggle-table-layout') - 0.01}) {
     &:empty {
       display: none;
     }
@@ -133,15 +100,43 @@ thead td {
   vertical-align: bottom;
 }
 
-// thead th:first-child,
-// tfoot th:first-child {
-//   text-align: left;
-// }
+thead th:first-child,
+tfoot th:first-child {
+  text-align: left;
+}
 
-// thead > tr:nth-last-of-type(odd) > th,
-// thead > tr:nth-last-of-type(odd) > td {
-// }
+thead > tr:nth-last-of-type(odd) > th,
+thead > tr:nth-last-of-type(odd) > td {
+}
 
+tbody {
+  font-family: mono-space, monospace;
+}
+
+tbody th {
+  text-align: left;
+}
+
+tbody td {
+  font-variant-numeric: lining-nums oldstyle-nums;
+  text-align: right;
+
+  @media screen and (max-width: #{map.get(my.$breakpoints, 'toggle-table-layout') - 0.01}) {
+    text-align: left;
+
+    &[aria-label] {
+      text-align: right;
+
+      &::before {
+        float: left;
+
+        font-style: italic;
+
+        content: attr(aria-label) ': ';
+      }
+    }
+  }
+}
 
 td img {
   vertical-align: top;
@@ -149,7 +144,9 @@ td img {
 
 tbody tr:nth-of-type(odd) > th,
 tbody tr:nth-of-type(odd) > td {
-  background-color: palette('orange', '10%');
+  @media screen and (max-width: #{map.get(my.$breakpoints, 'toggle-table-layout') - 0.01}) {
+    background-color: transparent;
+  }
 }
 
 tfoot th,
