--- a/layouts/partials/head/stylesheet.html
+++ b/layouts/partials/head/stylesheet.html
@@ -1,6 +1,7 @@
-
-{{ $style := resources.Get "stylesheets/index.scss" | toCSS | postCSS | minify | fingerprint }}
+{{ $style := resources.Get "stylesheets/index.scss" | toCSS (dict "transpiler" "dartsass" "targetPath" "dist/css/main.css") | postCSS (dict "use" "autoprefixer") | minify | fingerprint "md5" }}
 
 <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+
+
 
 <noscript><style>img.lazyload { display: none; }</style></noscript>
