--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,11 +1,11 @@
 <div class="narrow-container">
   {{ if ne .Kind "404" }}
-    <nav class="skip-links">
-      <ul>
-        <li class="to-content"><a href="#conteudo">conteúdo</a></li>
-        <li class="to-menu"><a href="#menu">menu</a></li>
-      </ul>
-    </nav>
+  <nav class="skip-links">
+    <div>
+      <div class="to-menu"><a href="#menu">menu</a></div>
+      <div class="to-content"><a href="#conteudo">conteúdo</a></div>
+    </div>
+  </nav>
   {{ end }}
 
 
@@ -17,46 +17,45 @@
     </div>
 
     {{ if .Site.Menus.main }}
-      <nav class="main-menu" id="menu">
-        <ul>
-          {{ $currentPage := . }}
-          {{ range .Site.Menus.main }}
-            {{ if .HasChildren }}
-              <input type="checkbox" id="{{ .Identifier }}-controler" class="controller" hidden />
+    <nav class="main-menu" id="menu">
 
-              <li class="has-sub-menu {{ if $currentPage.HasMenuCurrent "main" . }}is-active{{ end }}">
-                <label for="{{ .Identifier }}-controler" onclick class="controller-label">
-                  <a href="{{ .URL }}">
-                    {{ .Pre }}
-                    <span>{{ .Name }}</span>
-                  </a>
-                </label>
+      {{ $currentPage := . }}
+      {{ range .Site.Menus.main }}
+      {{ if .HasChildren }}
+      <input type="checkbox" id="{{ .Identifier }}-controler" class="controller" hidden />
 
-                <ul class="sub-menu">
-                  {{ range .Children }}
-                    <li class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
-                      <a href="{{ .URL }}">{{ .Name }}</a>
-                    </li>
-                  {{ end }}
-                </ul>
-              </li>
-            {{ else }}
-              <li>
-                <a href="{{ .URL }}">
-                  {{ .Pre }}
-                  <span>{{ .Name }}</span>
-                </a>
-              </li>
-            {{ end }}
+      <div class="has-sub-menu {{ if $currentPage.HasMenuCurrent " main" . }}is-active{{ end }}">
+
+        <label for="{{ .Identifier }}-controler" class="controller-label">
+          <a href="{{ .URL }}" class="{{ if $currentPage.IsMenuCurrent " main" . }}active{{ end }}">
+            {{ .Pre }}
+            {{ .Name }}
+          </a>
+        </label>
+
+        <div class="sub-menu">
+          {{ range .Children }}
+          <a href="{{ .URL }}">{{ .Name }}</a>
           {{ end }}
-        </ul>
-      </nav>
+        </div>
+      </div>
+      {{ else }}
+      <div>
+        <a href="{{ .URL }}">
+          {{ .Pre }}
+          <span>{{ .Name }}</span>
+        </a>
+      </div>
+      {{ end }}
+      {{ end }}
+
+    </nav>
     {{ end }}
   </div>
 
   <!-- {{ if .IsTranslated }}
     <nav class="languages-nav">
-      <ul class="languages-navlinks">
+      <div class="languages-navlinks">
         {{ range .Translations }}
           <li>
             <a href="{{ .RelPermalink }}"
@@ -64,7 +63,7 @@
             >
           </li>
         {{ end }}
-      </ul>
+      </div>
     </nav>
   {{ end }}
    -->
