--- a/tests/_color-contrast.scss
+++ b/tests/_color-contrast.scss
@@ -1,14 +1,19 @@
+@use 'sass:color';
+@use 'sass:string';
+
+@use 'stylesheets/abstracts/functions' as f;
+@use 'constants' as *;
+
 @mixin text-contrast($b, $f: null) {
-  @if text-contrast($b, $f) == transparent {
+  @if f.text-contrast($b, $f) == transparent {
     &::before {
       content: 'Impossible for ';
 
       filter: invert(100%);
     }
   } @else {
+    color: f.text-contrast($b, $f);
     text-align: right;
-
-    color: text-contrast($b, $f);
 
     &::before {
       display: block;
@@ -17,7 +22,7 @@
 
       text-align: left;
 
-      content: '\25a0\a0'+ quote(#{text-contrast($b, $f)});
+      content: '\25a0\a0'+ string.quote(#{f.text-contrast($b, $f)});
     }
   }
 }
@@ -37,16 +42,13 @@
   flex-shrink: 0;
 
   width: 25%;
-
   padding: 0.75rem;
   margin: 0;
 
-  font-weight: font-weights('bold');
   font-size: small;
+  font-weight: f.font-weight('bold');
   line-height: 1;
-
   text-align: center;
-
   list-style-type: none;
 
   &::before,
@@ -59,8 +61,8 @@
   }
 }
 
-@each $color in $colors {
-  $selector: to-lower-case(str-slice(#{$color}, 2, 7));
+@each $color in constants.$colors {
+  $selector: string.to-lower-case(string.slice(#{$color}, 2, 7));
 
   .color--blackwhite-#{$selector} {
     @include text-contrast($color);
@@ -81,37 +83,37 @@
   }
 
   .color--complementary-#{$selector} {
-    @include text-contrast($color, adjust-hue($color, 180));
+    @include text-contrast($color, color.adjust($color, $hue: 180));
 
     background-color: $color;
   }
 
   .color--compound-#{$selector} {
-    @include text-contrast($color, adjust-hue($color, 210));
+    @include text-contrast($color, color.adjust($color, $hue: 210));
 
     background-color: $color;
   }
 
   .color--analogous-1-#{$selector} {
-    @include text-contrast($color, adjust-hue($color, 30));
+    @include text-contrast($color, color.adjust($color, $hue: 30));
 
     background-color: $color;
   }
 
   .color--analogous-2-#{$selector} {
-    @include text-contrast($color, adjust-hue($color, -30));
+    @include text-contrast($color, color.adjust($color, $hue: -30));
 
     background-color: $color;
   }
 
   .color--triadic-1-#{$selector} {
-    @include text-contrast($color, adjust-hue($color, 120));
+    @include text-contrast($color, color.adjust($color, $hue: 120));
 
     background-color: $color;
   }
 
   .color--triadic-2-#{$selector} {
-    @include text-contrast($color, adjust-hue($color, 240));
+    @include text-contrast($color, color.adjust($color, $hue: 240));
 
     background-color: $color;
   }
